kubernetes/apps/math-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: math-app
  labels:
    projeto: math-trainer
